# jclariviere.github.io

./: .gitattributes  .gitignore  404.html  CNAME  Makefile  README.md  archives.html  authors.html  categories.html  index.html  justfile  pelicanconf.py  publishconf.py  pyproject.toml  requirements.txt  tags.html  tasks.py
.github/workflows/: deploy.yml
author/: jean-christophe-lariviere.html
blog/archives/: index.html
blog/authors/: index.html
blog/categories/: index.html
blog/tags/: index.html
category/: devops.html  infosec.html
code/vagrantfile-netcat/: Vagrantfile
code/vagrantfile-two-machines-trusty64/: Vagrantfile
content/: 2015-11-17-ctf-writeup-rctf-2015-quals-analysis-nginx-log.md  2015-11-17-ctf-writeup-rctf-2015-quals-analysis-nginx-log_DRAFT.md  2015-11-20-creating-a-new-vm-in-30-seconds-with-vagrant.md  2015-11-20-creating-virtual-machines-easily-with-vagrant.md  2015-11-23-creating-virtual-machines-easily-with-vagrant.md  2015-11-23-painless-virtual-machine-creation-with-vagrant.md  2015-11-30-ctf-writeup-9447-ctf-2015-yws.md
content/css/: custom.css
content/pages/: 404.md
content/posts/: 2015-11-17-ctf-writeup-rctf-2015-quals-analysis-nginx-log.md  2015-11-23-painless-virtual-machine-creation-with-vagrant.md  2015-11-23-virtual-machines-with-vagrant.md  2015-11-30-ctf-writeup-9447-ctf-2015-yws.md  2016-01-26-netcat-basics.md
css/: custom.css
feeds/: all.atom.xml  cybersecurity.atom.xml  devops.atom.xml  infosec.atom.xml
tag/: ctf.html  directory-traversal.html  netcat.html  sqli.html  vagrant.html
(+14 files in other folders)
